# entity-derive

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  STABILITY.md  cliff.toml  codecov.yml  deny.toml  logo.png.license
.config/: nextest.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
crates/entity-core/: Cargo.toml  README.md
crates/entity-core/src/: lib.rs  policy.rs  prelude.rs  stream.rs  transaction.rs
crates/entity-derive/: Cargo.toml
crates/entity-derive-impl/: Cargo.toml  README.md
crates/entity-derive-impl/src/: entity.rs  error.rs  lib.rs  utils.rs
crates/entity-derive-impl/src/entity/: api.rs  events.rs  hooks.rs  insertable.rs  migrations.rs  parse.rs  projection.rs  query.rs  repository.rs  sql.rs  streams.rs  transaction.rs
crates/entity-derive-impl/src/entity/api/: crud.rs  handlers.rs  openapi.rs  router.rs
crates/entity-derive-impl/src/entity/api/crud/: create.rs  delete.rs  get.rs  helpers.rs  list.rs  tests.rs  update.rs
crates/entity-derive-impl/src/entity/api/openapi/: info.rs  mod.rs  paths.rs  schemas.rs  security.rs  tests.rs
crates/entity-derive-impl/src/entity/commands/: enum_gen.rs  handler_gen.rs  mod.rs  result_gen.rs  struct_gen.rs
crates/entity-derive-impl/src/entity/migrations/: mod.rs  types.rs
crates/entity-derive-impl/src/entity/migrations/postgres/: ddl.rs  mod.rs
crates/entity-derive-impl/src/entity/migrations/types/: mod.rs  postgres.rs
crates/entity-derive-impl/src/entity/parse/: api.rs  command.rs  dialect.rs  entity.rs  field.rs  returning.rs  sql_level.rs  uuid_version.rs
crates/entity-derive-impl/src/entity/parse/api/: config.rs  mod.rs  parser.rs  tests.rs
crates/entity-derive-impl/src/entity/parse/command/: mod.rs  parser.rs  tests.rs  types.rs
crates/entity-derive-impl/src/entity/parse/entity/: accessors.rs  attrs.rs  constructor.rs  def.rs  helpers.rs  index.rs  mod.rs  projection.rs  tests.rs
crates/entity-derive-impl/src/entity/parse/field/: column.rs  example.rs  expose.rs  filter.rs  storage.rs  validation.rs
crates/entity-derive-impl/src/entity/policy/: allow_all.rs  mod.rs  trait_gen.rs  wrapper_gen.rs
crates/entity-derive-impl/src/entity/sql/: clickhouse.rs  mongodb.rs  postgres.rs
crates/entity-derive-impl/src/entity/sql/postgres/: context.rs  crud.rs  helpers.rs  notify.rs  query.rs  relations.rs
crates/entity-derive-impl/src/entity/streams/: subscriber.rs
crates/entity-derive-impl/src/utils/: docs.rs  fields.rs  marker.rs
crates/entity-derive/src/: lib.rs
crates/entity-derive/src/entity/parse/: field.rs
crates/entity-derive/src/entity/sql/postgres/: mod.rs  relations.rs
crates/entity-derive/tests/: integration.rs  streams.rs
crates/entity-derive/tests/cases/fail/: clickhouse_not_implemented.stderr  enum_derive.stderr  missing_id.rs  missing_id.stderr  missing_table.rs  missing_table.stderr  mongodb_not_implemented.stderr  tuple_struct.stderr
crates/entity-derive/tests/cases/pass/: all_field_attrs.rs  basic_entity.rs  commands_all_variants.rs  commands_basic.rs  commands_custom_payload.rs  commands_empty.rs  commands_with_hooks.rs  custom_error.rs  events.rs  events_soft_delete.rs  hooks.rs  hooks_minimal.rs  hooks_soft_delete.rs  migrations_basic.rs  migrations_constraints.rs  migrations_relations.rs  no_create_fields.rs  policy_basic.rs  query_filter.rs  returning_full.rs  returning_none.rs  sql_none.rs  transactions.rs  transactions_no_create_update.rs  transactions_soft_delete.rs
examples/axum-crud/: Cargo.toml  README.md  docker-compose.yml
examples/axum-crud/migrations/: 001_create_users.sql
examples/basic/: Cargo.toml  docker-compose.yml
examples/basic/src/: main.rs
examples/commands/: Cargo.toml
examples/commands/migrations/: 20240101000000_create_accounts.sql
examples/commands/src/: main.rs
examples/events/: Cargo.toml
examples/events/migrations/: 20240101000000_create_orders.sql
examples/events/src/: main.rs
examples/filtering/: Cargo.toml
examples/filtering/migrations/: 20240101000000_create_products.sql
examples/filtering/src/: main.rs
examples/full-app/: Cargo.toml
examples/full-app/migrations/: 20240101000000_create_schema.sql
examples/full-app/src/: main.rs
examples/hooks/: Cargo.toml
examples/hooks/migrations/: 20240101000000_create_users.sql
examples/hooks/src/: main.rs
examples/relations/: Cargo.toml
examples/relations/migrations/: 20240101000000_create_tables.sql
examples/relations/src/: main.rs
examples/soft-delete/: Cargo.toml
examples/soft-delete/migrations/: 20240101000000_create_documents.sql
examples/soft-delete/src/: main.rs
examples/streams/: Cargo.toml
examples/streams/migrations/: 20240101000000_create_logs.sql
examples/streams/src/: main.rs
examples/transactions/: Cargo.toml
examples/transactions/migrations/: 20240101000000_create_tables.sql
examples/transactions/src/: main.rs
src/: entity.rs  lib.rs  utils.rs
src/entity/: dto.rs  insertable.rs  mappers.rs  mod.rs  parse.rs  query.rs  repository.rs  row.rs  sql.rs
src/entity/parse/: dialect.rs  entity.rs  field.rs  returning.rs  sql_level.rs  uuid_version.rs
src/entity/parse/entity/: attrs.rs  mod.rs  projection.rs
src/entity/parse/field/: expose.rs  filter.rs  storage.rs
src/entity/sql/: clickhouse.rs  mongodb.rs  postgres.rs
src/entity/sql/postgres/: crud.rs  projections.rs  soft_delete.rs
src/utils/: fields.rs  marker.rs  sql.rs
tests/: integration.rs
tests/cases/fail/: clickhouse_not_implemented.rs  clickhouse_not_implemented.stderr  enum_derive.rs  missing_table.rs  mongodb_not_implemented.rs  mongodb_not_implemented.stderr  tuple_struct.rs  unit_struct.rs  unit_struct.stderr
tests/cases/pass/: all_field_attrs.rs  basic_entity.rs  belongs_to.rs  custom_error.rs  no_create_fields.rs  no_update_fields.rs  projection.rs  returning_custom.rs  returning_id.rs  soft_delete.rs  sql_none.rs  sql_trait_only.rs  uuid_v4.rs
