[package]
name = "entity-derive"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
description = "Derive macro for generating DTOs, repositories, and SQL from a single entity definition"
license = "MIT"
repository = "https://github.com/RAprogramm/entity-derive"
documentation = "https://docs.rs/entity-derive"
readme = "README.md"
keywords = ["derive", "macro", "entity", "dto", "repository"]
categories = ["development-tools::procedural-macro-helpers", "database"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"
convert_case = "0.10"

[dev-dependencies]
trybuild = "1"
