[package]
name = "entity-derive"
version = "0.1.4"
edition = "2024"
rust-version = "1.92"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
description = "Derive macro for generating DTOs, repositories, and SQL from a single entity definition"
license = "MIT"
repository = "https://github.com/RAprogramm/entity-derive"
documentation = "https://docs.rs/entity-derive"
readme = "README.md"
keywords = ["derive", "macro", "entity", "dto", "repository"]
categories = ["development-tools::procedural-macro-helpers", "database"]
exclude = [
  "tests/",
  ".github/",
  ".config/",
  "wip/",
  "cliff.toml",
  "deny.toml",
  "codecov.yml",
  "CHANGELOG.md",
]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "LICENSES/**/*"]

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"
convert_case = "0.10"

[dev-dependencies]
trybuild = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
