# SPDX-FileCopyrightText: 2025-2026 RAprogramm <andrey.rozanov.vl@gmail.com>
# SPDX-License-Identifier: MIT

[workspace]
resolver = "3"
members = ["crates/*"]
exclude = [
  "examples/basic",
  "examples/filtering",
  "examples/relations",
  "examples/events",
  "examples/hooks",
  "examples/commands",
  "examples/transactions",
  "examples/soft-delete",
  "examples/streams",
  "examples/full-app",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.92"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
license = "MIT"
repository = "https://github.com/RAprogramm/entity-derive"

[workspace.dependencies]
entity-core = { path = "crates/entity-core", version = "0.3.0" }
entity-derive = { path = "crates/entity-derive", version = "0.5.0" }
entity-derive-impl = { path = "crates/entity-derive-impl", version = "0.3.0" }
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"
convert_case = "0.10"
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
trybuild = "1"
utoipa = { version = "5", features = ["chrono", "uuid"] }
validator = { version = "0.20", features = ["derive"] }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
