# SPDX-FileCopyrightText: 2025-2026 RAprogramm <andrey.rozanov.vl@gmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "entity-core"
version = "0.1.2"
edition = "2024"
rust-version = "1.92"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
description = "Core traits and types for entity-derive"
license = "MIT"
repository = "https://github.com/RAprogramm/entity-derive"
documentation = "https://docs.rs/entity-core"
readme = "README.md"
keywords = ["entity", "repository", "traits", "database"]
categories = ["database"]

[features]
default = []
postgres = ["sqlx"]
clickhouse = []
mongodb = []
streams = ["serde", "serde_json", "futures"]

[dependencies]
async-trait = "0.1"
sqlx = { version = "0.8", optional = true, default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
futures = { version = "0.3", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
