# SPDX-FileCopyrightText: 2025-2026 RAprogramm <andrey.rozanov.vl@gmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "example-events"
version = "0.1.0"
edition = "2024"
publish = false
description = "Lifecycle events example with entity-derive"

[features]
default = ["postgres", "api"]
postgres = []
api = []
validate = []

[dependencies]
entity-derive = { path = "../../crates/entity-derive", features = ["postgres", "api"] }
entity-core = { path = "../../crates/entity-core", features = ["postgres"] }
axum = "0.8"
tokio = { version = "1", features = ["full", "sync"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
utoipa = { version = "5", features = ["chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
