# SPDX-FileCopyrightText: 2025-2026 RAprogramm <andrey.rozanov.vl@gmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "example-streams"
version = "0.1.0"
edition = "2024"
publish = false
description = "Real-time streams example with entity-derive"

[dependencies]
entity-derive = { path = "../..", features = ["postgres", "api"] }
axum = "0.8"
tokio = { version = "1", features = ["full", "sync"] }
tokio-stream = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
